--- a/bluebottle/accounting/templates/admin/accounting/dashboard.html
+++ b/bluebottle/accounting/templates/admin/accounting/dashboard.html
@@ -94,8 +94,7 @@
                         <div class="form-row">
                             {% trans "Start" %}: {{ form.start }} {% trans "Stop" %}: {{ form.stop }}
 
-                            {# {% if 'tenant' in form.fields %} #}
-                            {% if True %}
+                            {% if 'tenant' in form.fields %}
                                 {% trans "Select tenant" %}: {{ form.tenant }}
                             {% endif %}
 
@@ -115,34 +114,34 @@
             <h2>{% trans "Warnings" %}</h2>
             <table>
                 <tbody>
-                    <tr><td><a href="{% url 'admin:accounting_banktransaction_changelist' %}?integrity=invalid">
+                    <tr><td>{% if not all_tenants %}<a href="{% url 'admin:accounting_banktransaction_changelist' %}?integrity=invalid">{% endif %}
                                 {{ data.invalid_transactions_count }} {% trans "invalid bank transactions" %} -
                                 amount: {{ data.invalid_transactions_amount|numberformat }}
-                            </a>
+                            {% if not all_tenants %}</a>{% endif %}
                     </td></tr>
-                    <tr><td><a href="{% url 'admin:payments_orderpayment_changelist' %}?integrity=invalid">
+                    <tr><td>{% if not all_tenants %}<a href="{% url 'admin:payments_orderpayment_changelist' %}?integrity=invalid">{% endif %}
                                 {{ data.invalid_order_payments_count }} {% trans "invalid order payments" %} -
                                 amount: {{ data.invalid_order_payments_amount|numberformat }},
                                 transaction fee: {{ data.invalid_order_payments_transaction_fee|numberformat }}
-                            </a>
+                            {% if not all_tenants %}</a>{% endif %}
                     </td></tr>
-                    <tr><td><a href="{% url 'admin:donations_donation_changelist' %}?status__exact=failed">
+                    <tr><td>{% if not all_tenants %}<a href="{% url 'admin:donations_donation_changelist' %}?status__exact=failed">{% endif %}
                                 {{ data.donations_failed_count }} {% trans "failed donations" %} -
                                 amount: {{ data.donations_failed_amount|numberformat }}
-                            </a>
+                            {% if not all_tenants %}</a>{% endif %}
                     </td></tr>
 
         {# {% if request.user.is_superuser %} #}
-                    <tr><td><a href="{% url 'admin:payouts_projectpayout_changelist' %}?status__exact=in_progress">
+                    <tr><td>{% if not all_tenants %}<a href="{% url 'admin:payouts_projectpayout_changelist' %}?status__exact=in_progress">{% endif %}
                         {{ data.project_payouts_pending_in_progress_count }} {% trans "pending project payouts (in progress)" %} -
                         amount: {{ data.project_payouts_pending_in_progress_amount|numberformat }}
-                    </a>
+                    {% if not all_tenants %}</a>{% endif %}
                     </td></tr>
         {# {% elif request.user.is_staff %} #}
-                    <tr><td><a href="{% url 'admin:payouts_projectpayout_changelist' %}?status__exact=new">
+                    <tr><td>{% if not all_tenants %}<a href="{% url 'admin:payouts_projectpayout_changelist' %}?status__exact=new">{% endif %}
                         {{ data.project_payouts_pending_new_count }} {% trans "pending project payouts (new)" %} -
                             amount: {{ data.project_payouts_pending_new_amount|numberformat }}
-                        </a>
+                        {% if not all_tenants %}</a>{% endif %}
                     </td></tr>
         {# {% endif %} #}
                 </tbody>
@@ -160,42 +159,42 @@
                 <tbody>
                     <tr>
                         <th>Bank transactions</th>
-                        <td><a href="{% url 'admin:accounting_banktransaction_changelist' %}">{{ data.transactions_count }}</a></td>
+                        <td>{% if not all_tenants %}<a href="{% url 'admin:accounting_banktransaction_changelist' %}">{% endif %}{{ data.transactions_count }}{% if not all_tenants %}</a>{% endif %}</td>
                         <td>{{ data.transactions_amount|numberformat }}</td>
                     </tr>
                     <tr>
                         <th>Order payments</th>
-                        <td><a href="{% url 'admin:payments_orderpayment_changelist' %}">{{ data.order_payments_count }}</a></td>
+                        <td>{% if not all_tenants %}<a href="{% url 'admin:payments_orderpayment_changelist' %}">{% endif %}{{ data.order_payments_count }}{% if not all_tenants %}</a>{% endif %}</td>
                         <td>{{ data.order_payments_amount|numberformat }}</td>
                     </tr>
                     <tr>
                         <th>Remote docdata payments</th>
-                        <td><a href="{% url 'admin:accounting_remotedocdatapayment_changelist' %}">{{ data.remote_docdata_payments_count }}</a></td>
+                        <td>{% if not all_tenants %}<a href="{% url 'admin:accounting_remotedocdatapayment_changelist' %}">{% endif %}{{ data.remote_docdata_payments_count }}{% if not all_tenants %}</a>{% endif %}</td>
                         <td>{{ data.remote_docdata_payments_amount|numberformat }}</td>
                     </tr>
                     <tr>
                         <th>Remote docdata payouts</th>
-                        <td><a href="{% url 'admin:accounting_remotedocdatapayout_changelist' %}">{{ data.remote_docdata_payouts_count }}</a></td>
+                        <td>{% if not all_tenants %}<a href="{% url 'admin:accounting_remotedocdatapayout_changelist' %}">{% endif %}{{ data.remote_docdata_payouts_count }}{% if not all_tenants %}</a>{% endif %}</td>
                         <td>{{ data.remote_docdata_payouts_amount|numberformat }}</td>
                     </tr>
                     <tr>
                         <th>Project payouts</th>
-                        <td><a href="{% url 'admin:payouts_projectpayout_changelist' %}">{{ data.project_payouts_count }}</a></td>
+                        <td>{% if not all_tenants %}<a href="{% url 'admin:payouts_projectpayout_changelist' %}">{% endif %}{{ data.project_payouts_count }}{% if not all_tenants %}</a>{% endif %}</td>
                         <td>{{ data.project_payouts_amount|numberformat }}</td>
                     </tr>
                     <tr>
                         <th>Project payouts (settled)</th>
-                        <td><a href="{% url 'admin:payouts_projectpayout_changelist' %}">{{ data.project_payouts_settled_count }}</a></td>
+                        <td>{% if not all_tenants %}<a href="{% url 'admin:payouts_projectpayout_changelist' %}">{% endif %}{{ data.project_payouts_settled_count }}{% if not all_tenants %}</a>{% endif %}</td>
                         <td>{{ data.project_payouts_settled_amount|numberformat }}</td>
                     </tr>
                     <tr>
                         <th>Donations</th>
-                        <td><a href="{% url 'admin:donations_donation_changelist' %}">{{ data.donations_count }}</a></td>
+                        <td>{% if not all_tenants %}<a href="{% url 'admin:donations_donation_changelist' %}">{% endif %}{{ data.donations_count }}{% if not all_tenants %}</a>{% endif %}</td>
                         <td>{{ data.donations_amount|numberformat }}</td>
                     </tr>
                     <tr>
                         <th>Donations (settled)</th>
-                        <td><a href="{% url 'admin:donations_donation_changelist' %}?status__exact=pending_or_success">{{ data.donations_settled_count }}</a></td>
+                        <td>{% if not all_tenants %}<a href="{% url 'admin:donations_donation_changelist' %}?status__exact=pending_or_success">{% endif %}{{ data.donations_settled_count }}{% if not all_tenants %}</a>{% endif %}</td>
                         <td>{{ data.donations_settled_amount|numberformat }}</td>
                     </tr>
                 </tbody>
@@ -208,20 +207,20 @@
                     <tr>
                         <th>{% trans "Balance of pending orders" %}</th>
                         <td class="financial">
-                            <a href="#">{{ statistics.docdata.pending_orders|numberformat }}</a>
+                            {% if not all_tenants %}<a href="#">{% endif %}{{ statistics.docdata.pending_orders|numberformat }}{% if not all_tenants %}</a>{% endif %}
                         </td>
                     </tr>
                     <tr>
                         <th>{% trans "Balance of pending service fees to Docdata" %}</th>
                         <td class="financial">
-                            <a href="#">{{ statistics.docdata.pending_service_fee|numberformat }}</a>
+                            {% if not all_tenants %}<a href="#">{% endif %}{{ statistics.docdata.pending_service_fee|numberformat }}{% if not all_tenants %}</a>{% endif %}
                         </td>
                     </tr>
 
                     <tr>
                         <th>{% trans "Balance of pending payouts by Docdata to 1%Club" %}</th>
                         <td class="financial">
-                            <a href="{% url 'admin:payouts_projectpayout_changelist' %}">{{ statistics.docdata.pending_payout|numberformat }}</a>
+                            {% if not all_tenants %}<a href="{% url 'admin:payouts_projectpayout_changelist' %}">{% endif %}{{ statistics.docdata.pending_payout|numberformat }}{% if not all_tenants %}</a>{% endif %}
                         </td>
                     </tr>
                 </tbody>
@@ -241,9 +240,9 @@
                     <tr class="sum add">
                         {% with entry=statistics.project_payouts %}
                             <td>{{ entry.count }}</td>
-                            <td class="financial"><a href="{% url 'admin:payouts_projectpayout_changelist' %}">{{ entry.raised|numberformat }}</a></td>
-                            <td class="financial"><a href="{% url 'admin:payouts_projectpayout_changelist' %}">{{ entry.payable|numberformat }}</a></td>
-                            <td class="financial"><a href="{% url 'admin:payouts_projectpayout_changelist' %}">{{ entry.organization_fee|numberformat }}</a></td>
+                            <td class="financial">{% if not all_tenants %}<a href="{% url 'admin:payouts_projectpayout_changelist' %}">{% endif %}{{ entry.raised|numberformat }}{% if not all_tenants %}</a>{% endif %}</td>
+                            <td class="financial">{% if not all_tenants %}<a href="{% url 'admin:payouts_projectpayout_changelist' %}">{% endif %}{{ entry.payable|numberformat }}{% if not all_tenants %}</a>{% endif %}</td>
+                            <td class="financial">{% if not all_tenants %}<a href="{% url 'admin:payouts_projectpayout_changelist' %}">{% endif %}{{ entry.organization_fee|numberformat }}{% if not all_tenants %}</a>{% endif %}</td>
                         {% endwith %}
                     </tr>
                 </tbody>
