--- a/bluebottle/accounting/templates/admin/accounting/dashboard_data_tables_all_tenants.html
+++ b/bluebottle/accounting/templates/admin/accounting/dashboard_data_tables_all_tenants.html
@@ -1,3 +1,18 @@
 {% load i18n accounting %}
 
-{% include 'admin/accounting/dashboard_data_tables.html' with show_links=False %}
+{% include 'admin/accounting/dashboard_data_tables.html' with show_links=False data_dict=data statistics_dict=statistics %}
+
+    <br><br><br><br><br><br>
+
+    <h2><u><b>Data per tenant:</b></u></h2>
+
+    {% for tenant_name, tenant_data in all_tenants.items %}
+        <div class="tenant-details">
+            <br>
+            <h1>
+               {{ tenant_name }}
+            </h1>
+            <br>
+            {% include 'admin/accounting/dashboard_data_tables.html' with show_links=True data_dict=tenant_data.totals statistics_dict=tenant_data.statistics %}
+        </div>
+    {% endfor %}
