--- a/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
+++ b/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% blocktrans %}
-Hi {{ first_name }},<br/>
+Hi {{ receiver_first_name }},<br/>
 <br/>
 
 Thanks for you monthly do-good donation. You’re contribution makes a world of difference. 
