admin and multi admin templates changed to display bank account data correctly

--- a/bluebottle/accounting/templates/admin/accounting/dashboard.html
+++ b/bluebottle/accounting/templates/admin/accounting/dashboard.html
@@ -106,7 +106,7 @@
             {% if all_tenants %}
                {% include 'admin/accounting/dashboard_data_tables_all_tenants.html' %}
             {% else %}
-                {% include 'admin/accounting/dashboard_data_tables.html' with show_links=True data_dict=data statistics_dict=statistics %}
+                {% include 'admin/accounting/dashboard_data_tables.html' with show_links=True data_dict=data statistics_dict=statistics bank_accounts_list=bank_accounts %}
             {% endif %}
 
         {% endif %}
