--- a/bluebottle/accounting/templates/admin/accounting/dashboard_data_tables_all_tenants.html
+++ b/bluebottle/accounting/templates/admin/accounting/dashboard_data_tables_all_tenants.html
@@ -13,6 +13,6 @@
                {{ tenant_name }}
             </h1>
             <br>
-            {% include 'admin/accounting/dashboard_data_tables.html' with show_links=True data_dict=tenant_data.totals statistics_dict=tenant_data.statistics %}
+            {% include 'admin/accounting/dashboard_data_tables.html' with show_links=True data_dict=tenant_data.totals statistics_dict=tenant_data.statistics bank_accounts_list=tenant_data.bank_accounts %}
         </div>
     {% endfor %}
