--- a/bluebottle/accounting/templates/admin/accounting/banktransaction/retry_payout.html
+++ b/bluebottle/accounting/templates/admin/accounting/banktransaction/retry_payout.html
@@ -1,3 +1,3 @@
 {% extends "admin/accounting/banktransaction/base.html" %}{% load staticfiles i18n %}
 
-{% block action_label %}{% trans "manual donation" %}{% endblock %}
+{% block action_label %}{% trans "retry payout" %}{% endblock %}
