--- a/bluebottle/accounting/templates/admin/accounting/banktransaction/unknown_transaction.html
+++ b/bluebottle/accounting/templates/admin/accounting/banktransaction/unknown_transaction.html
@@ -1,23 +1,14 @@
-{% extends "admin/change_form.html" %}{% load staticfiles i18n %}
+{% extends "admin/accounting/banktransaction/base.html" %}{% load staticfiles i18n %}
 
 
 {% block extrahead %}
 {{ block.super }}
-<script src="{% static "admin/js/admin/RelatedObjectLookups.js" %}"></script>
 <style type="text/css">
 .col {
     width: 49%;
     float: left;
     margin-left: 0.5%;
     margin-right: 0.5%;
-}
-
-h1 > small {
-    opacity: 0.5;
-}
-strong > label {
-    color: #333;
-    font-weight: bold !important;
 }
 </style>
 {% endblock extrahead %}
