--- a/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
+++ b/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
@@ -11,7 +11,7 @@ Thanks for you monthly do-good donation. You’re contribution makes a world of 
 
 On {{ date }} you contributed {{ amount }}. Below you’ll find an overview of the project(s) you supported. <br/><br/>
 
-{% endblocktrans %}
+{% endblocktrans %}x
 {% for donation in order.donations.all %}
     <a href="{{ site }}/go/projects/{{ donation.project.slug }}">{{ donation.project.title }}</a>
     in {{ donation.project.country.name }}.<br/>
@@ -20,4 +20,8 @@ On {{ date }} you contributed {{ amount }}. Below you’ll find an overview of t
 <br/><br/>
 Thanks to your support we were able to realize so many projects.
 {% endblocktrans %}
+{% endblock %}
+
+{% block action %}
+<a href="{{ site }}" class="action-email">{% trans "Go to homepage" context 'recurring donation email' %}</a>
 {% endblock %}
