Fix parentheses in templates and other translation fixes.

--- a/bluebottle/bb_accounts/templates/bb_accounts/password_reset_email.html
+++ b/bluebottle/bb_accounts/templates/bb_accounts/password_reset_email.html
@@ -6,9 +6,9 @@
 
 Hello,
 <br><br>
-Seems you’ve requested a password reset for {{ site_name }}.
+Seems you've requested a password reset for {{ site_name }}.
 <br><br>
-<small>If you haven’t requested a reset of your password, you can ignore this email.</small>
+<small>If you haven't requested a reset of your password, you can ignore this email.</small>
 {% endblocktrans %}
 {% endblock %}
 
