--- a/bluebottle/bb_tasks/templates/task_member_realized.mail.html
+++ b/bluebottle/bb_tasks/templates/task_member_realized.mail.html
@@ -8,7 +8,7 @@ Hi {{ receiver_name }},
 <br><br>
 You did it! The project owner {{ sender_name }} marked the task <i>{{ task_title }}</i> as realized. Good job!
 <br><br>
-Let’s celebrate with a short comment!
+Let's celebrate with a short comment!
 {% endblocktrans %}
 {% endblock %}
 
