--- a/bluebottle/bb_accounts/templates/bb_accounts/activation_email.html
+++ b/bluebottle/bb_accounts/templates/bb_accounts/activation_email.html
@@ -5,7 +5,7 @@
 {% blocktrans %}
 
 <h1>Welcome {{ first_name }}</h1>
-<p class="lead">You’re officially part of {{ site_name }}</p>
+<p class="lead">You're officially part of {{ site_name }}</p>
 <br>
 [info about the platform]
 {% endblocktrans %}
