--- a/bluebottle/bb_tasks/templates/task_member_rejected.mail.html
+++ b/bluebottle/bb_tasks/templates/task_member_rejected.mail.html
@@ -6,7 +6,7 @@
 
 Hi {{ receiver_name }},
 <br><br>
-Unfortunately you weren’t selected for the task <i>{{ task_title }}</i>
+Unfortunately you weren't selected for the task <i>{{ task_title }}</i>
 <br><br>
 No worries, have a look at some similar tasks that need your skills.
 {% endblocktrans %}
