Fix parentheses in templates and other translation fixes.

--- a/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
+++ b/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
@@ -6,10 +6,10 @@
 Hi {{ first_name }},<br/>
 <br/>
 
-Thanks for you monthly do-good donation. You’re contribution makes a world of difference. 
+Thanks for you monthly do-good donation. You're contribution makes a world of difference.
 <br/>
 
-On {{ date }} you contributed {{ amount }}. Below you’ll find an overview of the project(s) you supported. <br/><br/>
+On {{ date }} you contributed {{ amount }}. Below you'll find an overview of the project(s) you supported. <br/><br/>
 
 {% endblocktrans %}
 {% for donation in order.donations.all %}
