add action link to monthly donation emails BB-3448

--- a/bluebottle/recurring_donations/templates/recurring_donations/mails/project_full_monthly_donor.mail.html
+++ b/bluebottle/recurring_donations/templates/recurring_donations/mails/project_full_monthly_donor.mail.html
@@ -15,3 +15,9 @@ Thanks for you loyal support!
 <br/><br/>
 {% endblocktrans %}
 {% endblock %}
+
+{% block action %}
+    <a href="{{ site }}{{ link }}" class="action">
+        {% trans 'Browse all project' context 'email' %}
+    </a>
+{% endblock %}
