--- a/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
+++ b/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
@@ -21,3 +21,9 @@ On {{ date }} you contributed {{ amount }}. Below you'll find an overview of the
 Thanks to your support we were able to realize so many projects.
 {% endblocktrans %}
 {% endblock %}
+
+{% block action %}
+    <a href="{{ site }}{{ link }}" class="action">
+        {% trans 'Browse all project' context 'email' %}
+    </a>
+{% endblock %}
