fix email action trans block BB-3448

--- a/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
+++ b/bluebottle/recurring_donations/templates/recurring_donations/mails/monthly_donation.mail.html
@@ -24,6 +24,6 @@ Thanks to your support we were able to realize so many projects.
 
 {% block action %}
     <a href="{{ site }}{{ link }}" class="action">
-        {% trans 'Browse all project' context 'email' %}
+        {% trans 'Browse all projects' %}
     </a>
 {% endblock %}
