--- a/bluebottle/projects/templates/projects/mails/project_complete.mail.html
+++ b/bluebottle/projects/templates/projects/mails/project_complete.mail.html
@@ -4,12 +4,14 @@
 {% block content %}
 {% blocktrans with receiver_name=to.short_name  %}
 
-Hello {{receiver_name}}
+Hi {{receiver_name}},
 <br><br>
-Congratulations! Your project "{{title}}" has been realized!<br>
+Congratulations! Your project "{{title}}" has been realised! It's time to celebrate!<br>
+<br>
+Why don't you share this success with your supporters.<br>
 {% endblocktrans %}
 {% endblock %}
 
 {% block action %}
-<a href="{{ site }}{{ link }}" class="action-email">{% trans 'Check your project' context 'email' %}</a>
+<a href="{{ site }}{{ link }}" class="action-email">{% trans 'Share an update' context 'email' %}</a>
 {% endblock %}`
