--- a/bluebottle/bb_projects/templates/admin_tools/dashboard/started_campaigns.html
+++ b/bluebottle/bb_projects/templates/admin_tools/dashboard/started_campaigns.html
@@ -6,7 +6,7 @@
     {% for project in module.children %}
     <li class="{% cycle 'odd' 'even' %}">
         <span class="float-right">{{ project.campaign_started|date }}</span>
-        <a href="{{ admin_url }}projects/project/{{ project.id }}" >{{ project.title }}</a>
+        <a href="{% url 'admin:projects_project_change' project.id %}" >{{ project.title }}</a>
     </li>
     {% endfor %}
     {% endspaceless %}
@@ -14,7 +14,7 @@
 
 <div class="dashboard-module-content">
     <p>
-        <a href="{{ admin_url }}projects/project/?status__id__exact=5">{%  trans "View all campaigning" %}</a>
+    <a href="{% url 'admin:projects_project_changelist'%}?status__id__exact=5">{%  trans "View all campaigning" %}</a>
     </p>
 </div>
 
