--- a/bluebottle/bb_projects/templates/admin_tools/dashboard/submitted_plans.html
+++ b/bluebottle/bb_projects/templates/admin_tools/dashboard/submitted_plans.html
@@ -6,7 +6,7 @@
     {% for project in module.children %}
     <li class="{% cycle 'odd' 'even' %}">
         <span class="float-right">{{ project.date_submitted|date }}</span>
-        <a href="{{ admin_url }}projects/project/{{ project.id }}" >{{ project.title }}</a>
+        <a href="{% url 'admin:projects_project_change' project.id %}" >{{ project.title }}</a>
     </li>
     {% endfor %}
     {% endspaceless %}
