--- a/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
@@ -5,7 +5,7 @@
     <p class="donation-intro">
         {% blocktrans with first_name=donation.user.first_name initiator_name=donation.project.owner.full_name slug=donation.project.slug%}
 
-        Thanks {{fist_name}}, for your donation! Be sure to follow the project page for the latest updates on the project.
+        Thanks {{first_name}}, for your donation! Be sure to follow the project page for the latest updates on the project.
         Give some extra support and share this project with your network.
         {% endblocktrans %}
     </p>
@@ -29,7 +29,6 @@
                     {{donation.user.full_name}} <br />
                     {{donation.user.address.line1}}<br />
                     {{donation.user.address.postal_code}} {{donation.user.address.city}}<br />
-                    {{donation.user.address.city}}
                 </td>
                 <td>
                     <table>
@@ -55,7 +54,7 @@
         <tr class="donation-table-share-title">{% trans "Support even more by sharing the project with your network:" %}</tr>
         <tr class="donation-share-buttons">
             <td>
-                <a class="action-facebook" href=""https://www.facebook.com/sharer/sharer.php?u={{site}}{{link}}">
+                <a class="action-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{site}}{{link}}">
                     {% trans 'Share on facebook' %}
                 </a>
                 <a class="action-twitter" href="https://twitter.com/intent/tweet?url={{site}}{{link}}">
