--- a/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/confirmation.mail.html
@@ -16,7 +16,7 @@
             </th>
             <th class="donation-amount">&euro; {{ donation.amount }}</th>
             <tr class="donation-location">
-                <td>{{donation.project.title}}</td>
+                <td><a href="/projects/{{donation.project.slug}}">{{donation.project.title}}</a></td>
             </tr>
         </tr>
         <tr class="donation-table-row">
